# rust-tracer

./: Cargo.toml  README.md  image.ppm
src/: camera.rs  hittables.rs  image.rs  lib.rs  main.rs  materials.rs  math.rs  utils.rs
