[package]
name = "rust-tracer"
version = "0.1.0"
edition = "2021"
description = "WIP: A ray tracer based on Ray Tracing in One Weekend, that has an easy to use `three.js`-like API."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
